// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Big ToggleSwitch 1`] = `
.c2 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.375rem;
  left: 0.375rem;
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c1 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 3.75rem;
  background: #C1C6CC;
}

.c0 {
  width: 6.5625rem;
  height: 3.75rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c0 input {
  cursor: pointer;
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  margin: 0;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

<div
  className="c0"
>
  <input
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
      size={60}
    />
  </div>
</div>
`;

exports[`ToggleSwitch default 1`] = `
.c2 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c1 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #C1C6CC;
}

.c0 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c0 input {
  cursor: pointer;
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  margin: 0;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

<div
  className="c0"
>
  <input
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
      size={20}
    />
  </div>
</div>
`;

exports[`ToggleSwitch on set to false 1`] = `
.c2 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c1 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #C1C6CC;
}

.c0 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c0 input {
  cursor: pointer;
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  margin: 0;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={false}
    checked={false}
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
      on={false}
      size={20}
    />
  </div>
</div>
`;

exports[`ToggleSwitch on set to true 1`] = `
.c2 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c1 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #6C43E0;
}

.c0 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c0 input {
  cursor: pointer;
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  margin: 0;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={true}
    checked={true}
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
      on={true}
      size={20}
    />
  </div>
</div>
`;

exports[`ToggleSwitch that is disabled 1`] = `
.c2 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c1 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #6C43E0;
}

.c1:hover {
  box-shadow: 0 0 0.01rem 0.01rem rgba(79,42,186,0.5);
}

.c3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0.4;
  background: #C1C6CC;
  border-radius: 1.25rem;
}

.c0 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c0 input {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  margin: 0;
}

.c0 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

<div
  className="c0"
>
  <input
    aria-checked={true}
    checked={true}
    disabled={true}
    role="switch"
    type="checkbox"
  />
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={true}
      on={true}
      size={20}
    />
  </div>
  <div
    className="c3"
    size={20}
  />
</div>
`;
